--- a/admin/index.html
+++ b/admin/index.html
@@ -23,10 +23,10 @@
         <p>Wprowadź dane do logowania</p>
 
         <div class="form-group">
-            <input placeholder="E-mail" type="text" name="username" class="form-control">
+            <input id ="login" placeholder="E-mail" type="text" name="login" class="form-control">
         </div>
         <div class="form-group">
-            <input placeholder="Hasło" type="password" name="password" class="form-control">
+            <input id="password" placeholder="Hasło" type="password" name="password" class="form-control">
         </div>
             <br>
         <div class="form-group fullCenter">
