--- a/Admin/index.html
+++ b/Admin/index.html
@@ -8,6 +8,7 @@
     <script src="js/shared/sharedScripts.js" type="module"></script>
     <script src="js/index.js" type="module"></script>
     <script src="../frontExtensions/js/vue.js"></script>
+    <script src="../frontExtensions/js/vue-router.js"></script>
     <script src="../frontExtensions/js/jquery.min.js"></script>
     <script src="../frontExtensions/js/bootstrap.min.js"></script>
 </head>
